[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sam-memory"
version = "0.1.0"
description = "Persistent, layered memory for AI sales agents. Sales-native port of the agentmemory 4-tier model."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "SAM contributors" }]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pydantic>=2.6,<3",
  "typer>=0.12",
  "rich>=13",
  "pyyaml>=6",
  "python-dateutil>=2.9",
  "eval-type-backport>=0.2; python_version<'3.10'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.scripts]
sam = "sam.cli:app"

[project.urls]
Homepage = "https://github.com/your-org/sam-memory"
Issues = "https://github.com/your-org/sam-memory/issues"
Changelog = "https://github.com/your-org/sam-memory/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["sam*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
